Fix div overlap

--- a/habit_builder/static/css/form-container.css
+++ b/habit_builder/static/css/form-container.css
@@ -1,8 +1,5 @@
 .form-container {
   box-sizing: border-box;
-  position: absolute;
-  top: 50%;
-  left: 50%;
   background-color: #2C2C2C;
   border: 1px solid #191919;
   color: #ffffff;
@@ -23,9 +20,8 @@
 
 .submit-button {
   -webkit-appearance: none;
-  position: absolute;
   margin-top: 10px;
-  right: 30px;
+  float: right;
   border: 0;
   background-color: #F15025;
   color: #ffffff;
