--- a/habit_builder/static/css/signup.css
+++ b/habit_builder/static/css/signup.css
@@ -9,9 +9,8 @@ hr {
 }
 
 .signup-menu {
-  margin-top: -175px;
-  margin-left: -125px;
-  width: 250px;
+  margin-top: 50px;
+  width: 270px;
   height: 360px;
   font-size: 1.0rem;
 }
@@ -45,10 +44,8 @@ hr {
 
 @media (min-width: 576px) {
   .signup-menu {
-    margin-top: -230px;
-    margin-left: -175px;
     width: 350px;
-    height: 460px;
+    height: 470px;
     font-size: 1.2rem;
   }
   .signup-menu p {
